--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>git</title>
 </head>
 <body>
-이건 연습이야.
+<h1>이건 연습이야.</h1>
 </body>
 </html>
