--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>git-
@@ -12,7 +12,7 @@
 
 
 브랜치 마스터 수정1
-브랜치 마스터 수정2
+브치 마스터 수정2
 
 </body>
 </html>
